プロフィールの箇所の修正（文章を2段組から1段組に変更および文章自体の修正）

--- a/index.html
+++ b/index.html
@@ -61,10 +61,8 @@
                 </div>
                 <!-- profile Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">平成6年生まれ、29歳エンジニアのKokiと申します。新卒でIT業界のベンチャー企業へ入社し、営業に従事。扱っていた商材がクラウドサービスであったこともあり、ITエンジニアに惹かれ、26歳の時に未経験から転職。そして、DBの保守からエンジニアとしてのキャリアをスタートしたものの、大学生の
-                    </p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">頃からフリーランスとして働いてみたいという気持ちがあったため、1度会社員を辞め、得意な英語を活かしてフリーランスの翻訳家に。そこからフリーランスを1年半ほど経て、やはり会社員として働く方が幸せだという結論に至り、再び会社員のエンジニアとしてキャリアを歩んで、現在に至ります。
-                    </p></div>
+                    <p class="lead">平成6年生まれ、29歳エンジニアのKokiと申します。新卒でIT業界のベンチャー企業へ入社し、営業に従事。扱っていた商材がクラウドサービスであったこともあり、ITエンジニアに惹かれ、26歳の時に未経験から転職。そして、DBの保守からエンジニアとしてのキャリアをスタートしたものの、大学生の頃からフリーランスとして働いてみたいという気持ちがあったため、1度会社員を辞め、得意な英語を活かしてフリーランスの翻訳家に。そこからフリーランスとして1年半ほどの経験を経ることで、会社員として働くことの良さを改めて強く感じため、再び会社員に戻ることを決断し、エンジニアとしてキャリアを歩み直して、現在に至ります。
+                    </p>
                 </div>
             </div>
         </section>
