--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <br>
                 <div class="row">
-                    <p class="lead">平成6年生まれ、29歳エンジニアのKokiと申します。新卒でIT業界のベンチャー企業へ入社し、営業に従事。扱っていた商材がクラウドサービスであったこともあり、ITエンジニアに惹かれ、26歳の時に未経験から転職。そして、DBの保守からエンジニアとしてのキャリアをスタートしたものの、大学生の頃からフリーランスとして働いてみたいという気持ちがあったため、1度会社員を辞め、得意な英語を活かしてフリーランスの翻訳家に。そこからフリーランスとして1年半ほどの経験を経ることで、会社員として働くことの良さを改めて強く感じため、再び会社員に戻ることを決断し、エンジニアとしてキャリアを歩み直して、現在に至ります。</p>
+                    <p class="lead">平成6年生まれ、29歳エンジニアのKokiと申します。新卒でIT業界のベンチャー企業へ入社し、営業に従事。扱っていた商材がクラウドサービスであったこともあり、ITエンジニアに惹かれ、26歳の時に未経験から転職。そして、DBの保守からエンジニアとしてのキャリアをスタートしたものの、大学生の頃からフリーランスとして働きたいという気持ちがあったため、1度会社員を辞め、得意な英語を活かしてフリーランスの翻訳家に。そこからフリーランスとして1年半ほどの経験を経ることで、会社員として働くことの良さを改めて強く感じため、会社員に戻ることを決断し、エンジニアとしてキャリアを歩み直して、現在に至ります。</p>
                 </div>
             </div>
         </section>
@@ -117,7 +117,7 @@
                     <h6>※技術に関しては、実務経験がほぼなく、自己学習や研修などで3カ月以上使用したことがあるものを記載しております。</h6>
                     <h5>
                         <br>実務経験はまだまだ足りませんが、現在は、最低でも1日3時間ほど自己学習の時間を確保し、オンラインの有料講座を活用しつつ、実際に手を動かしてWebアプリの作成などに取り組んでおります。 
-                        <br>貴プロジェクトで扱う技術につきましても、業務時間外の時間もフル活用して学び、最速でキャッチアップして参ります。
+                        <br>貴社で扱う技術につきましても、業務外の時間もフル活用して学び、最速でキャッチアップして参ります。
                     </h5>
                 </div>
             </div>
