4つ目の作品を追加掲載

--- a/index.html
+++ b/index.html
@@ -169,6 +169,18 @@
                             <img class="img-fluid" src="assets/img/works/changing_animals.gif" alt="..." />
                         </div>
                     </div>
+                    <!-- works Item 4-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="works-item mx-auto" data-bs-toggle="modal" data-bs-target="#worksModal4">
+                            <div class="works-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <br><br><br>
+                                <div class="works-item-caption-content text-center text-secondary">
+                                    <h4>Youtube分析ツール</h4>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/works/youtube-streamlit.png" alt="..." />
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -282,6 +294,37 @@
                                     <p class="mb-4">マウスの位置に動物の顔が表示され、マウスを動かすと、その位置に応じて、表示される動物の顔が変わるアプリです。Processingのおかげで、少ない行数の簡単なコードを書くだけで、絵が描けてしまうので、プログラミングをより身近に、そしてその可能性を感じさせてくれるアプリです。</p>
                                     <p class="mb-4">使用言語など：Python 3.11.4、Processing 4.2<br>
                                         <a href="https://github.com/Koki-create/changing-animals"><i class="bi bi-github"> GitHub</i></a>
+                                    </p>
+                                    <button class="btn btn-primary" data-bs-dismiss="modal">
+                                        <i class="fas fa-xmark fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- works Modal 4-->
+        <div class="works-modal modal fade" id="worksModal4" tabindex="-1" aria-labelledby="worksModal4" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
+                    <div class="modal-body text-center pb-5">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- works Modal - Title-->
+                                    <h2 class="works-modal-title text-secondary mb-0">Youtube分析ツール</h2>
+                                    <br><br>
+                                    <!-- works Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/works/youtube-streamlit.png" alt="..." />
+                                    <!-- works Modal - Text-->
+                                    <p class="mb-4">何かしらのキーワードを入力して検索し、表示されたYoutube上の動画を、さらにチャンネル登録者数でフィルタをかけて表示できる、Youtubeの分析ツールです。YouTube Data APIを用いており、フレームワークにはStreamlitを使用しております。さらに機能を充実させていき、Youtubeチャンネルを運営する人が、より高度な分析を行えるツールへと進化させていければと考えております。</p>
+                                    <p class="mb-4">使用言語など：Streamlit 1.23.1、Python 3.11.4<br>
+                                        <a href="https://github.com/Koki-create/streamlit-youtube-app"><i class="bi bi-github"> GitHub</i></a><br>
+                                        <a href="https://afw6kh9uvggpwfbc8d2r.streamlit.app"><i class="bi bi-link"> Streamlit Cloud</i></a>
                                     </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
