coming soonの画像の追加

--- a/index.html
+++ b/index.html
@@ -181,6 +181,18 @@
                             <img class="img-fluid" src="assets/img/works/youtube-streamlit.png" alt="..." />
                         </div>
                     </div>
+                    <!-- works Item 6-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="works-item mx-auto" data-bs-toggle="modal">
+                            <div class="works-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <br><br><br>
+                                <div class="works-item-caption-content text-center text-secondary">
+                                    <h4 class="opacity"><i class="bi bi-question-circle-fill"></i> <i class="bi bi-question-circle-fill"></i> <i class="bi bi-question-circle-fill"></i></h4>
+                                </div>
+                            </div>
+                            <img class="img-fluid opacity" src="assets/img/works/coming-soon.png" alt="..." />
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
