ブログアプリの名前を微修正

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <div class="works-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <br><br><br>
                                 <div class="works-item-caption-content text-center text-secondary">
-                                    <h4>Djangoを用いたブログアプリ</h4>
+                                    <h4>Djangoブログアプリ</h4>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/works/django-blog.png" alt="..." />
@@ -268,7 +268,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- works Modal - Title-->
-                                    <h2 class="works-modal-title text-secondary mb-0">Djangoを用いたブログアプリ</h2>
+                                    <h2 class="works-modal-title text-secondary mb-0">Djangoブログアプリ</h2>
                                     <br><br>
                                     <!-- works Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/works/django-blog.png" alt="..." />
