より見やすくてポジティブな印象にするために、スキルの箇所の文言を修正

--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
                     <br>
                     <h3>
                         <ul>
-                            <li>フロントエンド：HTML、CSS、JavaScript、WordPress</li>
-                            <li>バックエンド：Python(FWはDjango、Streamlit)、Java(FWはSpring Boot)</li>
-                            <li>DB：My SQL</li>
-                            <li>その他：Git/GitHub、Linux、VBA</li>
-                            <li>保有資格：Java Silver SE8、TOEIC 930点 など</li>
+                            <li>フロントエンド：HTML、CSS、WordPress</li>
+                            <li>バックエンド　：Python (Django, Streamlit)、Java (Spring Boot)</li>
+                            <li>データベース　：My SQL</li>
+                            <li>その他　　　　：Git/GitHub、Linux、VBA</li>
+                            <li>保有資格　　　：Java Silver SE8、TOEIC 930点 など</li>
                         </ul>
                     </h3>
-                    <h6>※技術に関しては、実務経験がほぼなく、自己学習や研修などで3カ月以上使用したことがあるものを記載しております。</h6>
+                    <h6>※技術に関しては、実務経験が少ないため、自己学習や研修などで3カ月以上使用したことがあるものを記載しております。</h6>
                     <h5>
                         <br>実務経験はまだまだ足りませんが、現在は、最低でも1日3時間ほど自己学習の時間を確保し、オンラインの有料講座を活用しつつ、実際に手を動かしてWebアプリの作成などに取り組んでおります。 
                         <br>貴社で扱う技術につきましても、業務外の時間もフル活用して学び、最速でキャッチアップして参ります。
