英語表記を日本語表記に修正

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                                     </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
+                                        ウィンドウを閉じる
                                     </button>
                                 </div>
                             </div>
@@ -279,7 +279,7 @@
                                     </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
+                                        ウィンドウを閉じる
                                     </button>
                                 </div>
                             </div>
@@ -309,7 +309,7 @@
                                     </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
+                                        ウィンドウを閉じる
                                     </button>
                                 </div>
                             </div>
@@ -340,7 +340,7 @@
                                     </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
+                                        ウィンドウを閉じる
                                     </button>
                                 </div>
                             </div>
