読みすくするために、サイト内の細かい文言の修正

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <!-- Skills Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <h3>2. 根本から解決する姿勢</h3>
-                        <h5>目の前の物事について、仕組み・環境から見直して再構築し、問題を根本から解決していくことが得意です。例えば、担当していたお問い合せ対応業務では、"そもそもなぜお問い合わせが発生するのか？"と根本から考え、分析し、仕組みを見直すことで、月5件以上発生していたお問い合わせの数を月0〜1件程度まで削減し、業務対応時間の削減に成功しました。</h5>
+                        <h5>物事について、仕組み・環境から見直して再構築し、問題を根本から解決していくことが得意です。例えば、担当していたお問い合せ対応業務では、"そもそもなぜお問い合わせが発生するのか？"と根本から考え、分析し、仕組みを見直すことで、月5件以上発生していたお問い合わせの数を月0〜1件程度まで削減し、業務対応時間の削減に成功しました。</h5>
                     </div>
                     <!-- Skills Item 3-->
                     <div class="col-md-6 col-lg-4 mb-5">
