--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <br>
                 <div class="row">
-                    <p class="lead">平成6年生まれ、29歳エンジニアのKokiと申します。新卒でIT業界のベンチャー企業へ入社し、営業に従事。扱っていた商材がクラウドサービスであったこともあり、ITエンジニアに惹かれ、26歳の時に未経験から転職。そして、DBの保守からエンジニアとしてのキャリアをスタートしたものの、大学生の頃からフリーランスとして働きたいという気持ちがあったため、1度会社員を辞め、得意な英語を活かしてフリーランスの翻訳家に。そこからフリーランスとして1年半ほどの経験を経ることで、会社員として働くことの良さを改めて強く感じため、会社員に戻ることを決断し、エンジニアとしてキャリアを歩み直して、現在に至ります。</p>
+                    <p class="lead">29歳でSEのKokiと申します。新卒でIT業界のベンチャー企業へ入社し、2年間法人営業に従事。その間は営業に限らず、販促活動や大学生のインターンシップ生のマネジメントなど幅広い業務に挑戦。その後、扱っていた商材がクラウドサービスであったこともあり、営業よりもITエンジニアの方が、人々の要望を叶えられ、自分の強みもより活かせると考えたことから、ITエンジニアに惹かれ、26歳の時に未経験からSEへ転職。そして、通信システムの保守からITエンジニアとしてのキャリアをスタート。しかし、大学生の頃からフリーランスとして働いてみたいという気持ちがあったため、1度会社員を辞め、得意な英語を活かしてフリーランスの翻訳家に。そこからフリーランスとして1年半近くの経験を経ることで、会社員であることの恩恵を改めて強く感じたため、会社員に戻ることを決断し、ITエンジニアとしてのキャリアを歩み直して、現在は再びSEとして働いています。</p>
                 </div>
             </div>
         </section>
@@ -85,19 +85,20 @@
                     <h2 class="text-center font-size=1"><font size="6">～ 特長 ～</font></h2>
                     <!-- Strengths Item 1-->
                     <div class="col-md-6 col-lg-4 mb-5">
-                        <h3>1. 貪欲な学習意欲</h3>
-                        <h5>業務時間中だけでなく、業務時間外でも毎日最低3時間の学習時間を確保して日々積極的に学び、得た知識を業務に活かしております。現在の担当業務では、自発的に学んだExcelの知識を活用し、時には先輩社員の力を借りつつ、担当業務に関数やマクロを導入しました。その結果、月に100時間ほど要していた作業時間を20時間にまで短縮し、さらには作業ミスを撲滅できました。
+                        <h3>1. 自走力</h3>
+                        <h5>現職の担当業務では、業務開始当初、現場に正確な手順書が存在せず、かつ前任の担当者が急遽辞めてしまったため、引き継ぎも特にない状態だったのですが、様々な資料に目を通したり、チームメンバーにヒアリングしたりと自ら情報をかき集めていくことで、業務の手順書を1カ月ほどで作り上げました。さらにその上で、休日などの時間を使って自発的に学んだExcelの知識を活用し、時には先輩社員の力を借りつつ、担当業務に関数やマクロを導入しました。結果、月に100時間ほど要していた作業工数を6割削減することに成功しました。
                             </h5>
                     </div>
                     <!-- Skills Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
-                        <h3>2. 根本から解決する姿勢</h3>
-                        <h5>物事について、仕組み・環境から見直して再構築し、問題を根本から解決していくことが得意です。例えば、担当していたお問い合せ対応業務では、"そもそもなぜお問い合わせが発生するのか？"と根本から考え、分析し、仕組みを見直すことで、月5件以上発生していたお問い合わせの数を月0〜1件程度まで削減し、業務対応時間の削減に成功しました。</h5>
+                        <h3>2. 根本から解決する力</h3>
+                        <h5>物事について、仕組み・環境から見直して再構築し、問題を根本解決していくことが得意です。例えば、現職で担当中のお問い合せ対応業務では、"そもそもなぜお問い合わせが発生するのか？"と根本から考え、分析し、仕組みを見直すことで、月5件以上発生していたお問い合わせの数を月0〜1件程度まで削減し、業務対応時間の削減に成功しました。</h5>
                     </div>
                     <!-- Skills Item 3-->
                     <div class="col-md-6 col-lg-4 mb-5">
-                        <h3>3. 英語力</h3>
-                        <h5>大学時代、1年間の交換留学をしていた際に、英語でのコミュニケーション力を身に付けました。最初は、周りの人たちの英語の会話に全くついていけない自分に絶望し、悔しさから文字通り涙することもありました。しかし、その悔しさを糧に、24時間英語漬けの環境をつくることで、猛スピードで英語力を磨き、ネイティブスピーカーとも会話できるレベルとなりました。</h5>
+                        <h3>3. 向上心と貪欲な学習欲</h3>
+                        <h5>向上心が強く、仕事においても常に現状に満足せず、"より短時間で、より質の高い成果を出したい"という気持ちが強いため、常日頃から業務に活かせそうな情報を絶えず学び続けています。例えばですが、最近でも、現職の業務と転職活動を並行して行いながらも、隙間時間を活用して2週間ほどでAWSの資格に合格することができました。                            
+                        </h5>
                     </div>
                 </div>
                 <br>
@@ -111,13 +112,13 @@
                             <li>バックエンド　：Python (Django, Streamlit)、Java (Spring Boot)</li>
                             <li>データベース　：My SQL</li>
                             <li>その他　　　　：Git/GitHub、Linux、VBA</li>
-                            <li>保有資格　　　：Java Silver SE8、TOEIC 930点 など</li>
+                            <li>保有資格　　　：Java Silver SE8、AWS Cloud Practitioner、<br>
+                                　　　　　　　　TOEIC 930点 など</li>
                         </ul>
                     </h3>
-                    <h6>※技術に関しては、実務経験が少ないため、自己学習や研修などで3カ月以上使用したことがあるものを記載しております。</h6>
+                    <h6>※技術に関しては、自己学習や研修などで3カ月以上使用したことがあるものを記載しております。</h6>
                     <h5>
-                        <br>実務経験はまだまだ足りませんが、現在は、最低でも1日3時間ほど自己学習の時間を確保し、オンラインの有料講座を活用しつつ、実際に手を動かしてWebアプリの作成などに取り組んでおります。 
-                        <br>貴社で扱う技術につきましても、業務外の時間もフル活用して学び、最速でキャッチアップして参ります。
+                        <br>実務経験はまだまだ足りておりませんが、持ち前の自走力や貪欲な学習欲を活かして、どうすれば貴社にいち早く貢献できるのか、貴社の環境で結果を出すために必要な知識やスキルが何なのかを常に考え、業務外の時間もフル活用して学び続けて、最速でキャッチアップしていくことをお約束します。
                     </h5>
                 </div>
             </div>
