全体的にサイト上の情報が古いので最新の情報に修正

--- a/index.html
+++ b/index.html
@@ -65,7 +65,13 @@
                 </div>
                 <br>
                 <div class="row">
-                    <p class="lead">29歳でSEのKokiと申します。新卒でIT業界のベンチャー企業へ入社し、2年間法人営業に従事。その間は営業に限らず、販促活動や大学生のインターンシップ生のマネジメントなど幅広い業務に挑戦。その後、扱っていた商材がクラウドサービスであったこともあり、営業よりもITエンジニアの方が、人々の要望を叶えられ、自分の強みもより活かせると考えたことから、ITエンジニアに惹かれ、26歳の時に未経験からSEへ転職。そして、通信システムの保守からITエンジニアとしてのキャリアをスタート。しかし、大学生の頃からフリーランスとして働いてみたいという気持ちがあったため、1度会社員を辞め、得意な英語を活かしてフリーランスの翻訳家に。そこからフリーランスとして1年半近くの経験を経ることで、会社員であることの恩恵を改めて強く感じたため、会社員に戻ることを決断し、ITエンジニアとしてのキャリアを歩み直して、現在は再びSEとして働いています。</p>
+                    <p class="lead">30歳でSEのKokiと申します。新卒でIT業界のベンチャー企業へ入社し、2年間法人営業に従事。その間は営業に
+                        限らず、販促活動や大学生のマネジメントなど幅広い業務に挑戦。その後、営業よりもITエンジニアの方が、
+                        人々の要望を叶えられ、自分の強みもより活かせると考えたことから、ITエンジニアに惹かれ、26歳の時に未経
+                        験の状態でSEへ転職。そして、システムの保守からITエンジニアとしてのキャリアをスタート。しかし、大学生
+                        の頃からフリーランスとして働いてみたいという気持ちがあったため、1度会社員を辞め、得意な英語を活かし
+                        てフリーランスの翻訳家に。そこからフリーランスとして1年半近くの経験を経て、会社員であることの恩恵を
+                        改めて強く感じたため、会社員に戻ることを決断し、SEとしてのキャリアを歩み直し、現在至ります。</p>
                 </div>
             </div>
         </section>
@@ -86,13 +92,13 @@
                     <!-- Strengths Item 1-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <h3>1. 自走力</h3>
-                        <h5>現職の担当業務では、業務開始当初、現場に正確な手順書が存在せず、かつ前任の担当者が急遽辞めてしまったため、引き継ぎも特にない状態だったのですが、様々な資料に目を通したり、チームメンバーにヒアリングしたりと自ら情報をかき集めていくことで、業務の手順書を1カ月ほどで作り上げました。さらにその上で、休日などの時間を使って自発的に学んだExcelの知識を活用し、時には先輩社員の力を借りつつ、担当業務に関数やマクロを導入しました。結果、月に100時間ほど要していた作業工数を6割削減することに成功しました。
+                        <h5>前職において、業務開始当初、業務の正確な手順書が存在せず、かつ前任者からの引き継ぎも全くありませんでした。しかし、様々な資料を読んだり、周りの方々にヒアリングをしたりと、自ら情報をかき集め、手順書を約1カ月で作り上げました。その上で、業務時間外で自発的にExcelについて学び、先輩社員の力を借りながら担当業務に関数やマクロを導入することで、作業工数を6割削減できました。
                             </h5>
                     </div>
                     <!-- Skills Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <h3>2. 根本から解決する力</h3>
-                        <h5>物事について、仕組み・環境から見直して再構築し、問題を根本解決していくことが得意です。例えば、現職で担当中のお問い合せ対応業務では、"そもそもなぜお問い合わせが発生するのか？"と根本から考え、分析し、仕組みを見直すことで、月5件以上発生していたお問い合わせの数を月0〜1件程度まで削減し、業務対応時間の削減に成功しました。</h5>
+                        <h5>物事について、仕組み・環境から見直して再構築し、問題を根本解決していくことが得意です。例えば、前職で担当した、お問い合せ対応の業務では、"そもそもなぜお問い合わせが発生するのか？"と根本から考え、分析し、仕組みを見直すことで、月5件以上発生していたお問い合わせ数を月0〜1件程度まで削減し、業務効率化に成功しました。</h5>
                     </div>
                     <!-- Skills Item 3-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -101,22 +107,21 @@
                         </h5>
                     </div>
                 </div>
-                <br>
                 <!-- Skills Items-->
                 <div class="row justify-content-center">
                     <h2 class="text-center"><font size="6">～ スキル ～</font></h2>
                     <br>
-                    <h3>
+                    <h4>
                         <ul>
-                            <li>フロントエンド：HTML、CSS、WordPress</li>
-                            <li>バックエンド　：Python (Django, Streamlit)、Java (Spring Boot)</li>
-                            <li>データベース　：My SQL</li>
-                            <li>その他　　　　：Git/GitHub、Linux、VBA</li>
+                            <li>フロントエンド：HTML/CSS, JavaScript, WordPress</li>
+                            <li>バックエンド　：PHP (Laravel), Python (Django, Streamlit), Java (Spring Boot)</li>
+                            <li>データベース　：MySQL, PostgreSQL</li>
+                            <li>その他　　　　：Docker, GitHub, Linux, VBA</li>
                             <li>保有資格　　　：Java Silver SE8、AWS Cloud Practitioner、<br>
-                                　　　　　　　　TOEIC 930点 など</li>
+                                　　　　　　　　基本情報技術者試験、Excel VBA ベーシック、TOEIC 930点 など</li>
                         </ul>
-                    </h3>
-                    <h6>※技術に関しては、自己学習や研修などで3カ月以上使用したことがあるものを記載しております。</h6>
+                        <h6>※技術に関しては、スクールや研修などで3カ月以上使用したことがあるものを記載しております。</h6>
+                    </h4>
                     <h5>
                         <br>実務経験はまだまだ足りておりませんが、持ち前の自走力や貪欲な学習欲を活かして、どうすれば貴社にいち早く貢献できるのか、貴社の環境で結果を出すために必要な知識やスキルが何なのかを常に考え、業務外の時間もフル活用して学び続けて、最速でキャッチアップしていくことをお約束します。
                     </h5>
@@ -223,7 +228,7 @@
         
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>&copy; Copyright 2023 Koki Oguro's Portfolio. All Rights Reserved.</small></div>
+            <div class="container"><small>&copy; Copyright 2025 Koki Oguro's Portfolio. All Rights Reserved.</small></div>
         </div>
         <!-- works Modals-->
         <!-- works Modal 1-->
