脱字の修正

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         験の状態でSEへ転職。そして、システムの保守からITエンジニアとしてのキャリアをスタート。しかし、大学生
                         の頃からフリーランスとして働いてみたいという気持ちがあったため、1度会社員を辞め、得意な英語を活かし
                         てフリーランスの翻訳家に。そこからフリーランスとして1年半近くの経験を経て、会社員であることの恩恵を
-                        改めて強く感じたため、会社員に戻ることを決断し、SEとしてのキャリアを歩み直し、現在至ります。</p>
+                        改めて強く感じたため、会社員に戻ることを決断し、SEとしてのキャリアを歩み直し、現在に至ります。</p>
                 </div>
             </div>
         </section>
